Fix bevel crash T56287, when face strength goes to 1.